RESOLVED FIXED158434
[Win][IndexedDB] Crash when running worker test.
https://bugs.webkit.org/show_bug.cgi?id=158434
Summary [Win][IndexedDB] Crash when running worker test.
Per Arne Vollan
Reported 2016-06-06 13:05:08 PDT
The test storage/indexeddb/modern/blob-simple-workers.html makes DumpRenderTree crash under SerializedScriptValue::writeBlobsToDiskForIndexedDBSynchronously() because RunLoop::main() returns nullptr.
Attachments
Patch (1.08 KB, patch)
2016-06-06 13:13 PDT, Per Arne Vollan
achristensen: review+
Per Arne Vollan
Comment 1 2016-06-06 13:13:42 PDT
Per Arne Vollan
Comment 2 2016-06-07 05:42:55 PDT
Thanks for reviewing :)
Per Arne Vollan
Comment 3 2016-06-07 05:43:53 PDT
Note You need to log in before you can comment on or make changes to this bug.