[Win][IndexedDB] Crash when running worker test. https://bugs.webkit.org/show_bug.cgi?id=158434

Reviewed by Alex Christensen.

Initialize main runloop, otherwise RunLoop::main() will return nullptr.

* WebView.cpp:
(WebView::WebView):


Canonical link: https://commits.webkit.org/176534@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201748 268f45cc-cd09-0410-ab3c-d52691b4dbfc